added google verification tag

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="_P7Xj8gjQKkvYVzlElNBCb9fE6Lr9b7Os4FIl4diYI4" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/mailstorm.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
